--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sonner": "^1.5.0",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.2.2"
   },
   "devDependencies": {
     "eslint": "^8",
